Moving to JAVA 11 - Fixes #15 (#40)